@@ -1,0 +1,2 @@
+<http://localhost/lod2democonfiguration> <http://lod2.eu/lod2demo/hostname> "140.203.155.11"^^<http://www.w3.org/2001/XMLSchema#string> .
+
